--- a/niveles/asesinatopc.html
+++ b/niveles/asesinatopc.html
@@ -16,7 +16,8 @@
         (este ultimo trabaja en el hotel), y te haces muy amigo/a con ellos, 
         incluso con los roces que pueden llegar a tener.
         <br>
-        Pero te despiertas y descubres algo aterrador, todos ellos ahora estan muertos,
+        Pero te despiertas y descubres algo aterrador, todos ellos ahora estan muertos, se encontraron a las 7:30 AM.
+        Sus cuerpos se encontraban en sus respectivas habitaciones
     </p>
 </body>
 </html>
